OD-119 Correction orthographe et modification title tableau

--- a/templates/dissertation/offerproposition_filter.html
+++ b/templates/dissertation/offerproposition_filter.html
@@ -29,7 +29,7 @@
                 <div class="col-md-5">	
                     <table class="table table-striped table-hover" id="tb_pgms">	
                         <tr>	
-                            <th> {% trans 'Education Group'%}</th>	
+                            <th> {% trans 'Filter by education group'%}</th>
                         </tr>	
                         <form action="{% url 'adviser_list' %}" id='form_offer_prop' method="get">	
                             {% for obj in object_list %}	
