--- a/templates/manager_informations_detail.html
+++ b/templates/manager_informations_detail.html
@@ -84,7 +84,7 @@
                         {% if adviser.person.phone %}
                         <div class="row">
                             <div class="col-md-3" style="text-align: right">
-                                <label>{% trans 'phone' %}</label>
+                                <label>{% trans 'Phone' %}</label>
                             </div>
                             <div class="col-md-4">
                                 {% if adviser.available_by_phone %}
