--- a/templates/manager_dissertations_detail.html
+++ b/templates/manager_dissertations_detail.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% load static %}
-{% load i18n %}
+{% load i18n static dissertation %}
 
 {% comment "License" %}
 * OSIS stands for Open Student Information System. It's an application
@@ -76,38 +75,25 @@
                         {{ dissertation.title }}
                     </div>
                 </div>
-                {% if filename != "" %}
                 <div class="row">
-                    <div class="col-md-3" style="text-align: right">
+                    <div class="col-md-4" style="text-align:right">
                         <label>{% trans 'File' %}</label>
                     </div>
-                    <div class="col-md-9">
-                        <a href="{% url 'dissertation_download' dissertation_pk=dissertation.pk %}" title="{% trans 'Download' %}">
-                            <i class="far fa-file"> {{ filename }}</i>
-                        </a>
-                        <a data-url="{% url 'dissertation_file_delete' dissertation_pk=dissertation.pk %}"
-                           class="btn btn-warning btn-xs trigger_modal" role="button">
-                                 <span class="fas fa-times">
-                                 </span>
-                        </a>
+                    <div class="col-md-8">
+                        <button class="btn btn-default" data-toggle="modal" data-target="#proposition_dissertation_file_upload">
+                            <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span>
+                            {% trans "Upload your file" %}
+                        </button>
                     </div>
                 </div>
-                {% else %}
+                <br>
                 <div class="row">
-                    <div class="col-md-3" style="text-align: right">
-                        <label>{% trans 'File' %}</label>
+                    <div class="col-md-4" style="text-align:right">
                     </div>
-                    <div class="col-md-9">
-                        <a class="btn btn-default btn-primary btn-xs" data-toggle="modal" data-target="#pnl_upload_documents"
-                           id="btn_add_file" title="{% trans 'Add file'%}">
-                            <i class="fas fa-plus"></i>
-                            {% trans 'Add file'%}
-                            <span class="fas fa-file-upload" aria-hidden="true" id="spn_add_file">
-                                </span>
-                        </a>
+                    <div class="col-md-4" style="text-align:right">
+                        {% field_data "" document %}
                     </div>
                 </div>
-                {% endif %}
                 <div class="row">
                     <div class="col-md-3" style="text-align: right">
                         <label>{% trans 'Status' %}</label>
@@ -401,91 +387,10 @@
             </div>
     </div>
 </div>
-<!-- UploadFile modal -->
-{% include "new_document.html" %}
+<!-- Upload file modal -->
+{% include 'file_upload_modal.html' with form=proposition_dissertation_file_form %}
 {% endblock %}
 
 {% block script %}
-    <script>
-        $("#bt_upload_document").click(function(event) {
-            var target = $(event.target);
-            var id = target.attr("id");
-            var form = target.form;
-
-            var description = $("#hdn_description").val();
-            //Clear existing fields
-            $('#hdn_file_'+$("#txt_file").val()).remove();
-            $('#hdn_file_name_'+description).remove();
-            $('#hdn_file_description_'+description).remove();
-            var fileSelect = document.getElementById('txt_file');
-            var files = fileSelect.files;
-            var file = files[0];
-            var data = new FormData();
-            data.append('description', description);
-            data.append('storage_duration', 0);
-            data.append('content_type',file.type);
-            data.append('filename', $("#txt_file").val());
-            data.append('dissertation_id', $("#hdn_current_dissertation_id").val());
-
-
-            var accepted_types = ['application/csv',
-                                  'application/doc',
-                                  'application/pdf',
-                                  'application/xls',
-                                  'application/xlsx',
-                                  'application/xml',
-                                  'application/zip',
-                                  'image/jpeg',
-                                  'image/gif',
-                                  'image/png',
-                                  'text/html',
-                                  'text/plain'];
-            if(file){
-                if ($.inArray(file.type,accepted_types) >= 0){
-                    data.append('file', file);
-                    $.ajax({
-                        url: "{% url 'dissertation_save_upload' %}",
-                        enctype: 'multipart/form-data',
-                        type: 'POST',
-                        data : data,
-                        processData: false,
-                        contentType: false,
-                        complete: function(xhr, statusText){
-                            if(xhr.status=='0'){
-                                //problem occured
-                                $('#pnl_admission_error').remove();
-                                var msg_error = jQuery('<div class="alert alert-danger" id="pnl_admission_error">'+ gettext('error_occured')+'</span>');
-                                $('#pnl_admission_errors').append(msg_error);
-                                return false;
-                            }
-                            window.location.reload(true);
-                        }
-
-                    });
-                    // update_upload_btn_class(file, description);
-                    return true;
-                }else{
-                    display_existing_files(description);
-                    $("#txt_file").val('')
-                    $('#pnl_upload_error').remove();
-                    var msg_error = jQuery('<div class="alert alert-danger" id="pnl_upload_error">'+ file.name + ' : ' +gettext('invalid_content_type')+ ' </span>');
-                    $('#pnl_modal_upload').append(msg_error);
-                    event.preventDefault();
-                    event.stopImmediatePropagation();
-                    return false;
-                }
-            }else{
-                    display_existing_files(description);
-                    $("#txt_file").val('')
-                    $('#pnl_upload_error').remove();
-                    var msg_error = jQuery('<div class="alert alert-warning" role="alert" id="pnl_upload_error">' +gettext('select_file')+ ' </div>');
-                    $('#pnl_modal_upload').append(msg_error);
-                    event.preventDefault();
-                    event.stopImmediatePropagation();
-                    return false;
-            }
-
-
-        });
-    </script>
-{% endblock %}
+    {{ proposition_dissertation_file_form.media }}
+{% endblock script %}
