--- a/templates/manager_proposition_dissertation_detail.html
+++ b/templates/manager_proposition_dissertation_detail.html
@@ -218,7 +218,7 @@
              </div>
     </div>
     <!-- Upload file modal -->
-    {% include 'file_upload_modal.html' with form=proposition_dissertation_file_form %}
+    {% include 'file_upload_proposition_dissertaton_modal.html' with form=proposition_dissertation_file_form %}
 {% endblock %}
 
 {% block script %}
