--- a/templates/dissertations_detail.html
+++ b/templates/dissertations_detail.html
@@ -67,13 +67,13 @@
                         {{ dissertation.title }}
                     </div>
                 </div>
-                {% if document %}
+                {% if dissertation_file %}
                     <div class="row">
                         <div class="col-md-3" style="text-align:right">
                             <label>{% trans 'File' %}</label>
                         </div>
                         <div class="col-md-4" style="text-align:right">
-                            {% field_data "" document %}
+                            {% field_data "" dissertation_file %}
                         </div>
                     </div>
                 {% endif %}
@@ -200,6 +200,16 @@
                         {{ dissertation.proposition_dissertation.title }}
                     </div>
                 </div>
+                {% if proposition_dissertation_file %}
+                    <div class="row">
+                        <div class="col-md-3" style="text-align:right">
+                            <label>{% trans 'File' %}</label>
+                        </div>
+                        <div class="col-md-4" style="text-align:right">
+                            {% field_data "" proposition_dissertation_file %}
+                        </div>
+                    </div>
+                {% endif %}
             </div>
         </div>
 
@@ -223,5 +233,6 @@
 {% endblock %}
 
 {% block script %}
+    {{ dissertation_file_form.media }}
     {{ proposition_dissertation_file_form.media }}
 {% endblock script %}
