--- a/templates/proposition_dissertation_detail.html
+++ b/templates/proposition_dissertation_detail.html
@@ -221,7 +221,7 @@
     </div>
     {% endif %}
     <!-- Upload file modal -->
-    {% include 'file_upload_modal.html' with form=proposition_dissertation_file_form %}
+    {% include 'file_upload_proposition_dissertaton_modal.html' with form=proposition_dissertation_file_form %}
 {% endblock %}
 
 {% block script %}
