FIxed review PR

--- a/templates/dissertations_detail.html
+++ b/templates/dissertations_detail.html
@@ -73,7 +73,7 @@
                             <label>{% trans 'File' %}</label>
                         </div>
                         <div class="col-md-4" style="text-align:right">
-                            {% field_data "" dissertation_file %}
+                            {% field_data dissertation_file %}
                         </div>
                     </div>
                 {% endif %}
@@ -206,7 +206,7 @@
                             <label>{% trans 'File' %}</label>
                         </div>
                         <div class="col-md-4" style="text-align:right">
-                            {% field_data "" proposition_dissertation_file %}
+                            {% field_data proposition_dissertation_file %}
                         </div>
                     </div>
                 {% endif %}
