--- a/templates/manager_dissertations_detail.html
+++ b/templates/manager_dissertations_detail.html
@@ -91,7 +91,7 @@
                     <div class="col-md-4" style="text-align:right">
                     </div>
                     <div class="col-md-4" style="text-align:right">
-                        {% field_data "" dissertation_file %}
+                        {% field_data dissertation_file %}
                     </div>
                 </div>
                 <div class="row">
@@ -282,7 +282,7 @@
                     <div class="col-md-3" style="text-align:right">
                     </div>
                     <div class="col-md-6" style="text-align:right">
-                        {% field_data "" proposition_dissertation_file %}
+                        {% field_data proposition_dissertation_file %}
                     </div>
                 </div>
             {% endif %}
