--- a/templates/manager_proposition_dissertation_detail.html
+++ b/templates/manager_proposition_dissertation_detail.html
@@ -83,7 +83,7 @@
                 <div class="col-md-4" style="text-align:right">
                 </div>
                 <div class="col-md-4" style="text-align:right">
-                    {% field_data "" document %}
+                    {% field_data document %}
                 </div>
             </div>
             <div class="row">
