--- a/templates/dissertations_detail.html
+++ b/templates/dissertations_detail.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% load i18n static dissertation %}
+{% load i18n static osis_document %}
 
 {% comment "License" %}
 * OSIS stands for Open Student Information System. It's an application
@@ -73,7 +73,7 @@
                             <label>{% trans 'File' %}</label>
                         </div>
                         <div class="col-md-4" style="text-align:right">
-                            {% field_data dissertation_file %}
+                            {% if files %}{% document_visualizer dissertation_file %}{% endif %}
                         </div>
                     </div>
                 {% endif %}
@@ -206,7 +206,7 @@
                             <label>{% trans 'File' %}</label>
                         </div>
                         <div class="col-md-4" style="text-align:right">
-                            {% field_data proposition_dissertation_file %}
+                            {% if files %}{% document_visualizer proposition_dissertation_file %}{% endif %}
                         </div>
                     </div>
                 {% endif %}
