Suppressio nde field_data

--- a/templates/dissertations_detail.html
+++ b/templates/dissertations_detail.html
@@ -73,7 +73,7 @@
                             <label>{% trans 'File' %}</label>
                         </div>
                         <div class="col-md-4" style="text-align:right">
-                            {% if files %}{% document_visualizer dissertation_file %}{% endif %}
+                            {% document_visualizer dissertation_file %}
                         </div>
                     </div>
                 {% endif %}
@@ -206,7 +206,7 @@
                             <label>{% trans 'File' %}</label>
                         </div>
                         <div class="col-md-4" style="text-align:right">
-                            {% if files %}{% document_visualizer proposition_dissertation_file %}{% endif %}
+                            {% document_visualizer proposition_dissertation_file %}
                         </div>
                     </div>
                 {% endif %}
