--- a/templates/manager_dissertations_edit.html
+++ b/templates/manager_dissertations_edit.html
@@ -27,13 +27,14 @@
 {% endcomment %}
 
 {% block breadcrumb %}
-  <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
-  <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
-  <li><a href="{% url 'manager_dissertations_list' %}" id="lnk_dissertations_list">{% trans 'Dissertations' %}</a></li>
-  <li><a href="{% url 'manager_dissertations_detail' pk=dissert.pk %}" id="lnk_dissertations_detail">
+    <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
+    <li id="lnk_cohorts_management"><a href="{% url 'cohorts_management' %}">{% trans "Cohorts management" %}</a></li>
+    <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
+    <li><a href="{% url 'manager_dissertations_list' %}" id="lnk_dissertations_list">{% trans 'Dissertations' %}</a></li>
+    <li><a href="{% url 'manager_dissertations_detail' pk=dissert.pk %}" id="lnk_dissertations_detail">
       {{ dissert.title|truncatechars:24 }}
-  </a></li>
-  <li class="active">{% trans 'Edit' %}</li>
+    </a></li>
+    <li class="active">{% trans 'Edit' %}</li>
 {% endblock %}
 {% block content %}
   <div class="page-header">
