--- a/templates/dissertations_add_justification.html
+++ b/templates/dissertations_add_justification.html
@@ -27,12 +27,13 @@
 {% endcomment %}
 
 {% block breadcrumb %}
-  <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
-  <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
-  <li><a href="{% url 'dissertations_list' %}" id="lnk_dissertations_list">{% trans 'Dissertations' %}</a></li>
-  <li><a href="{% url 'dissertations_detail' pk=dissert.pk %}"
+    <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
+    <li id="lnk_cohorts_management"><a href="{% url 'cohorts_management' %}">{% trans "Cohorts management" %}</a></li>
+    <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
+    <li><a href="{% url 'dissertations_list' %}" id="lnk_dissertations_list">{% trans 'Dissertations' %}</a></li>
+    <li><a href="{% url 'dissertations_detail' pk=dissert.pk %}"
          id="lnk_dissertations_detail">{{ dissert.title|truncatechars:24 }}</a></li>
-  <li class="active">{% trans 'Add justification' %}</li>
+    <li class="active">{% trans 'Add justification' %}</li>
 {% endblock %}
 {% block content %}
   <div class="page-header">
