--- a/templates/dissertations_detail_updates.html
+++ b/templates/dissertations_detail_updates.html
@@ -29,9 +29,10 @@
 {% load tz %}
 
 {% block breadcrumb %}
-<li><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
-<li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
-<li><a href="{% url 'dissertations_list' %}" id="lnk_propositions">{% trans 'Dissertations' %}</a></li>
+    <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
+    <li id="lnk_cohorts_management"><a href="{% url 'cohorts_management' %}">{% trans "Cohorts management" %}</a></li>
+    <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
+    <li><a href="{% url 'dissertations_list' %}" id="lnk_propositions">{% trans 'Dissertations' %}</a></li>
 <li class="active">{{ dissertation.title|truncatechars:24 }}</li>
 {% endblock %}
 {% block content %}
