--- a/templates/manager_informations_edit.html
+++ b/templates/manager_informations_edit.html
@@ -27,11 +27,12 @@
 {% endcomment %}
 
 {% block breadcrumb %}
-  <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
-  <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
-  <li><a href="{% url 'manager_informations' %}" id="lnk_teachers">{% trans 'Teachers' %}</a></li>
-  <li><a href="{% url 'manager_informations_detail' pk=adviser.pk %}">{{ adviser.person.last_name }}, {{ adviser.person.first_name }}</a></li>
-  <li class="active">{% trans 'Edit' %}</li>
+    <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
+    <li id="lnk_cohorts_management"><a href="{% url 'cohorts_management' %}">{% trans "Cohorts management" %}</a></li>
+    <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
+    <li><a href="{% url 'manager_informations' %}" id="lnk_teachers">{% trans 'Teachers' %}</a></li>
+    <li><a href="{% url 'manager_informations_detail' pk=adviser.pk %}">{{ adviser.person.last_name }}, {{ adviser.person.first_name }}</a></li>
+    <li class="active">{% trans 'Edit' %}</li>
 {% endblock %}
 {% block content %}
   <div class="page-header">
