--- a/templates/proposition_dissertation_edit.html
+++ b/templates/proposition_dissertation_edit.html
@@ -27,11 +27,12 @@
 {% endcomment %}
 
 {% block breadcrumb %}
-  <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
-  <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
-  <li><a href="{% url 'my_dissertation_propositions' %}" id="lnk_propositions">{% trans 'Dissertation subjects' %}</a></li>
-  <li><a href="{% url 'proposition_dissertation_detail' pk=prop_dissert.pk %}">{{ prop_dissert.title }}</a></li>
-  <li class="active">{% trans 'Edit' %}</li>
+    <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
+    <li id="lnk_cohorts_management"><a href="{% url 'cohorts_management' %}">{% trans "Cohorts management" %}</a></li>
+    <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
+    <li><a href="{% url 'my_dissertation_propositions' %}" id="lnk_propositions">{% trans 'Dissertation subjects' %}</a></li>
+    <li><a href="{% url 'proposition_dissertation_detail' pk=prop_dissert.pk %}">{{ prop_dissert.title }}</a></li>
+    <li class="active">{% trans 'Edit' %}</li>
 {% endblock %}
 {% block content %}
   <div class="page-header">
